[gd_scene load_steps=3 format=3 uid="uid://d50b7u06qhob"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_jbcn3"]
[ext_resource type="FontFile" uid="uid://17rn6qh4i0q1" path="res://Fonts/PixelifySans.ttf" id="2_ldc3b"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jbcn3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 532.0
offset_top = 184.0
offset_right = 713.0
offset_bottom = 224.0

[node name="SpeedTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ldc3b")
theme_override_font_sizes/font_size = 20
text = "SPEED"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 20.0
step = 5.0
value = 50.0

[node name="SpeedValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ldc3b")
theme_override_font_sizes/font_size = 20
text = "50"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ldc3b")
theme_override_font_sizes/font_size = 25
text = "SAVE"

[connection signal="value_changed" from="VBoxContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
